pxc/tests/test_003_interface/constr2.px
public namespace constr2;
import core::common -;

interface ifoo {
  function void m();
}

struct foo < ifoo > {
  function void m() { println("hoge"); }
}

function void t1() {
  ptr{ifoo} p = make_ptr{ifoo}(foo()); // error
}

